name: fwbv
version: 1.0.0.0
synopsis: Fixed-width bit vector library
license: AllRightsReserved
license-file: LICENSE
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental

library
  exposed-modules:
    Data.NumT
    Data.BitVector.FixedWidth
  build-depends: base ==4.6.*
  ghc-options: -fwarn-unused-binds -fwarn-unused-imports

test-suite test-fwbv
  type: exitcode-stdio-1.0
  main-is: tests.hs
  build-depends: base ==4.6.*

