name: seri-bin
version: 1.1.0.0
synopsis: Seri language binaries
license: AllRightsReserved
license-file: LICENSE
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental
source-repository this
  type: git
  location: /afs/csail.mit.edu/u/r/ruhler/git/seri
  --branch:
  --tag:
executable seri
  main-is: seri.hs
  build-depends: base ==4.5.*,
                 cmdargs ==0.10.*, syb ==0.3.*,
                 seri ==1.1.*, seri-smt ==1.1.*
  ghc-prof-options: -fprof-auto-top
