name: seri-smt
version: 0.2.0.0
synopsis: SMT primitives and backends for seri
license: AllRightsReserved
license-file: LICENSE
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental
source-repository this
  type: git
  location: /afs/csail.mit.edu/u/r/ruhler/git/seri
--branch:
--tag:
library
  exposed-modules: Seri.IO.Run, Seri.SMT.Run, Seri.SMT.STP.Concrete, Seri.SMT.STP.FFI, Seri.SMT.STP.STP, Seri.SMT.Yices.Concrete, Seri.SMT.Yices.FFI2, Seri.SMT.Yices.Yices1, Seri.SMT.Yices.Yices2
    --Seri.DSEL.SMT
    Seri.HaskellF.HaskellF
    Seri.HaskellF.Lib.Prelude
    Seri.HaskellF.Symbolic
    --Seri.HaskellF.Lib.SMT
    --Seri.HaskellF.Lib.Query
  build-depends: base ==4.5.*, mtl ==2.1.*, pretty ==1.1.*, array ==0.4.*, directory ==1.1.*, template-haskell ==2.7.*, hashable ==1.1.*, containers ==0.4.*, bytestring ==0.9.*, seri ==0.3.*
  extra-libraries: stp stdc++ yices1 yices2
  ghc-prof-options: -auto-all
