name: seri
version: 1.1.0.0
synopsis: Seri language compilers and infrastructure
license: AllRightsReserved
license-file: LICENSE
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental
data-dir: sri
data-files:
    Prelude.sri
    Control/Monad/*.sri
    Debug/*.sri
    Data/*.sri
    Seri/*.sri
    Seri/Tests/*.sri
    Seri/Tests/MalTyped/*.sri
    Seri/Sudoku/*.sri
    Seri/SMT/*.sri
    Seri/SMT/Tests/*.sri
    Seri/SMT/Tests/Squares2/*.sri
    Seri/SMT/Tests/Squares/*.sri
source-repository this
  type: git
  location: /afs/csail.mit.edu/u/r/ruhler/git/seri
  --branch:
  --tag:
library
  exposed-modules:
    Seri
    Seri.Bit
    Seri.Strict
    Seri.Failable
    Seri.HashTable

    Seri.Name
    Seri.Sig

    Seri.Type
    Seri.Type.Typeof
    Seri.Type.Sugar
    Seri.Type.TH
    Seri.Type.Utils
    Seri.Type.SeriT
    Seri.Type.Type
    Seri.Type.SeriTs
    Seri.Type.Ppr

    Seri.Exp
    Seri.Exp.Exp
    Seri.Exp.Typeof
    Seri.Exp.Match
    Seri.Exp.Sugar
    Seri.Exp.Utils
    Seri.Exp.Do
    Seri.Exp.Ppr

    Seri.ExpH
    Seri.ExpH.ExpH
    Seri.ExpH.SeriEH
    Seri.ExpH.Typeof
    Seri.ExpH.Sugar
    Seri.ExpH.Sugar2
    Seri.ExpH.SeriEHs
    Seri.ExpH.SeriEHs2
    Seri.ExpH.TH
    Seri.ExpH.FromExpH
    Seri.ExpH.Ppr
    Seri.ExpH.Utils

    Seri.Inline

    Seri.Prim
    Seri.Prim.Prim
    Seri.Prim.Prelude
    Seri.Prim.Bit

    Seri.HaskellF.HaskellF
    Seri.HaskellF.Lib.Prelude
    Seri.HaskellF.Symbolic
    Seri.HaskellF.TH

    Seri.Module
    Seri.Module.Module

    Seri.Dec
    Seri.Dec.Prelude
    Seri.Dec.Record
    Seri.Dec.Env
    Seri.Dec.Dec
    Seri.Dec.Ppr
    Seri.Dec.Utils

    Seri.Typing
    Seri.Typing.Infer
    Seri.Typing.Check
    Seri.Typing.Solver

    Seri.Parser
    Seri.Parser.Monad
    Seri.Parser.Lexer
    Seri.Parser.Grammar
    Seri.Parser.PatOrExp
    Seri.Parser.Utils

    Seri.Loader

    Seri.Fresh.Pretty
    Seri.Fresh.Fast
    Seri.Fresh.Fresh

    Seri.SMT.IVP
    Seri.SMT.Solver
    Seri.SMT.Syntax
    Seri.SMT.Translate
    Seri.SMT.Query

    Seri.Fresh

    Seri.Ppr
    Seri.Lit
  other-modules: Paths_seri
  build-depends: base ==4.5.*, mtl ==2.1.*, pretty ==1.1.*, array ==0.4.*,
                 directory ==1.1.*, template-haskell ==2.7.*, hashable ==1.1.*,
                 containers ==0.4.*, bytestring ==0.9.*
  build-tools: happy
  ghc-prof-options: -fprof-auto-top
