name: smten-base
version: @VERSION@-@GITTAG@
synopsis: Smten library
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2012, 2013  SRI International, Inc.
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental
description:
  This package provides the Smten Prelude and base libraries.

source-repository this
  type: git
  location: https://github.com/ruhler/smten.git
  branch: @GITBRANCH@
  tag: @GITTAG@

library
  exposed-modules:
    Smten.Prelude
    Smten.Control.Monad0
    Smten.Control.Monad
    Smten.Data.Bool
    Smten.Data.Bool0
    Smten.Data.Char
    Smten.Data.Char0
    Smten.Data.Function
    Smten.Data.Functor
    Smten.Data.Either
    Smten.Data.Enum
    Smten.Data.EnumInteger
    Smten.Data.EnumInt
    Smten.Data.Eq
    Smten.Data.Eq0
    Smten.Data.Eq1
    Smten.Data.EqInteger
    Smten.Data.Integral
    Smten.Data.Integral0
    Smten.Data.List
    Smten.Data.List0
    Smten.Data.Maybe
    Smten.Data.Num
    Smten.Data.Num0
    Smten.Data.Read
    Smten.Data.Show
    Smten.Data.Show0
    Smten.Data.Show1
    Smten.Data.Ord
    Smten.Data.Ord0
    Smten.Data.Ord1
    Smten.Data.Tuple
    Smten.Derive.Show
    Smten.GHC.Num
    Smten.Smten.Base
    Smten.Smten.Char
    Smten.Smten.Int
    Smten.Smten.Integer
    Smten.Smten.List
    Smten.Smten.Tuple
    Smten.Smten.Unit
    Smten.System.IO
    Smten.System.IO0

    Smten.Runtime.AnyMap
    Smten.Runtime.AssertCache
    Smten.Runtime.Bit
    Smten.Runtime.Formula
    Smten.Runtime.Formula.BitF
    Smten.Runtime.Formula.BoolF
    Smten.Runtime.Formula.IntegerF
    Smten.Runtime.Formula.PartialF
    Smten.Runtime.Formula.Finite
    Smten.Runtime.Formula.Type
    Smten.Runtime.FreeID
    Smten.Runtime.Select
    Smten.Runtime.SmtenHS
    Smten.Runtime.StableNameEq
    Smten.Runtime.SymbolicOf

    Smten.Compiled.Smten.Prelude
    Smten.Compiled.Smten.Control.Monad0
    Smten.Compiled.Smten.Control.Monad
    Smten.Compiled.Smten.Data.Bool
    Smten.Compiled.Smten.Data.Bool0
    Smten.Compiled.Smten.Data.Char
    Smten.Compiled.Smten.Data.Char0
    Smten.Compiled.Smten.Data.Function
    Smten.Compiled.Smten.Data.Functor
    Smten.Compiled.Smten.Data.Either
    Smten.Compiled.Smten.Data.Enum
    Smten.Compiled.Smten.Data.EnumInteger
    Smten.Compiled.Smten.Data.EnumInt
    Smten.Compiled.Smten.Data.Eq
    Smten.Compiled.Smten.Data.Eq0
    Smten.Compiled.Smten.Data.Eq1
    Smten.Compiled.Smten.Data.EqInteger
    Smten.Compiled.Smten.Data.Integral
    Smten.Compiled.Smten.Data.Integral0
    Smten.Compiled.Smten.Data.List
    Smten.Compiled.Smten.Data.List0
    Smten.Compiled.Smten.Data.Maybe
    Smten.Compiled.Smten.Data.Num
    Smten.Compiled.Smten.Data.Num0
    Smten.Compiled.Smten.Data.Read
    Smten.Compiled.Smten.Data.Show
    Smten.Compiled.Smten.Data.Show0
    Smten.Compiled.Smten.Data.Show1
    Smten.Compiled.Smten.Data.Ord
    Smten.Compiled.Smten.Data.Ord0
    Smten.Compiled.Smten.Data.Ord1
    Smten.Compiled.Smten.Data.Tuple
    Smten.Compiled.Smten.GHC.Num
    Smten.Compiled.Smten.Smten.Base
    Smten.Compiled.Smten.Smten.Char
    Smten.Compiled.Smten.Smten.Int
    Smten.Compiled.Smten.Smten.Integer
    Smten.Compiled.Smten.Smten.List
    Smten.Compiled.Smten.Smten.Tuple
    Smten.Compiled.Smten.Smten.Unit
    Smten.Compiled.Smten.System.IO
    Smten.Compiled.Smten.System.IO0

    Smten.Compiled.Control.Exception.Base
    Smten.Compiled.GHC.Base
    Smten.Compiled.GHC.Classes
    Smten.Compiled.GHC.CString
    Smten.Compiled.GHC.Enum
    Smten.Compiled.GHC.Integer.Type
    Smten.Compiled.GHC.Num
    Smten.Compiled.GHC.Prim
    Smten.Compiled.GHC.Show
    Smten.Compiled.GHC.TopHandler
    Smten.Compiled.GHC.Tuple
    Smten.Compiled.GHC.Types

  build-depends: base ==4.6.*, ghc-prim ==0.3.*, smten ==@VERSIONMAJOR@.*,
                 hashtables ==1.0.*, template-haskell ==2.8.*,
                 transformers ==0.3.*
  --ghc-prof-options: -fprof-auto-top
  ghc-options: -fwarn-unused-binds -fwarn-unused-imports

