name: smten-bin
version: 2.2.0.0
synopsis: Smten compiler and interpreter
license: AllRightsReserved
license-file: LICENSE
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental
source-repository this
  type: git
  location: /afs/csail.mit.edu/u/r/ruhler/git/smten
  --branch:
  --tag:
executable smten
  main-is: smten.hs
  build-depends: base ==4.6.*, cmdargs ==0.10.*, smten ==2.2.*
  --ghc-prof-options: -fprof-auto-top
  ghc-options: -rtsopts -fwarn-unused-binds -fwarn-unused-imports

