name: smten-lib
version: 4.0.0.0
synopsis: Smten library
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2012, 2013  SRI International, Inc.
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental
description:
  This package provides the Smten Symbolic API and other Smten libraries not
  part of the Smten base libraries. It includes a pure solver based on the
  list monad which is not very efficient. For improved solving performance,
  install one of the SMT backend solvers, such as smten-yices2, smten-z3, or
  smten-stp.

source-repository this
  type: git
  location: https://github.com/ruhler/smten.git
  --branch:
  --tag:

library
  exposed-modules:
    Smten.Runtime.Integers
    Smten.Runtime.Solver
    Smten.Runtime.SolverAST
    Smten.Runtime.Result

    Smten.Control.Monad.Error
    Smten.Control.Monad.Error.Class
    Smten.Control.Monad.Reader
    Smten.Control.Monad.Reader.Class
    Smten.Control.Monad.State.Class
    Smten.Control.Monad.State.Lazy
    Smten.Control.Monad.State.Strict
    Smten.Control.Monad.State
    Smten.Control.Monad.Trans
    Smten.Data.Array
    Smten.Data.Array0
    Smten.Data.Bit
    Smten.Data.Bit0
    Smten.Data.Ix
    Smten.Data.Map
    Smten.Debug.Trace0
    Smten.Debug.Trace
    Smten.Smten.TypeLits

    Smten.Symbolic0
    Smten.Symbolic
    Smten.Symbolic.SMT
    Smten.Symbolic.Solver.Pure
    Smten.Symbolic.Solver.Debug
    Smten.System.Environment
    Smten.System.Exit
    Smten.System.Timeout
    Smten.Tests.Array
    Smten.Tests.Basic
    Smten.Tests.Bit
    Smten.Tests.DataMap
    Smten.Tests.List
    Smten.Tests.Prelude
    Smten.Tests.State
    Smten.Tests.SMT.Test
    Smten.Tests.SMT.Bit
    Smten.Tests.SMT.Core
    Smten.Tests.SMT.Datatype
    Smten.Tests.SMT.Error
    Smten.Tests.SMT.Integer
    Smten.Tests.Test
    Smten.Tests.All

    Smten.Compiled.GHC.TypeLits
    Smten.Compiled.Smten.Control.Monad.Error
    Smten.Compiled.Smten.Control.Monad.Error.Class
    Smten.Compiled.Smten.Control.Monad.Reader
    Smten.Compiled.Smten.Control.Monad.Reader.Class
    Smten.Compiled.Smten.Control.Monad.State.Class
    Smten.Compiled.Smten.Control.Monad.State.Lazy
    Smten.Compiled.Smten.Control.Monad.State.Strict
    Smten.Compiled.Smten.Control.Monad.State
    Smten.Compiled.Smten.Control.Monad.Trans
    Smten.Compiled.Smten.Data.Array
    Smten.Compiled.Smten.Data.Array0
    Smten.Compiled.Smten.Data.Bit
    Smten.Compiled.Smten.Data.Bit0
    Smten.Compiled.Smten.Data.Ix
    Smten.Compiled.Smten.Data.Map
    Smten.Compiled.Smten.Debug.Trace0
    Smten.Compiled.Smten.Debug.Trace
    Smten.Compiled.Smten.Smten.TypeLits

    Smten.Compiled.Smten.Symbolic0
    Smten.Compiled.Smten.Symbolic
    Smten.Compiled.Smten.Symbolic.SMT
    Smten.Compiled.Smten.Symbolic.Solver.Pure
    Smten.Compiled.Smten.Symbolic.Solver.Debug
    Smten.Compiled.Smten.System.Environment
    Smten.Compiled.Smten.System.Exit
    Smten.Compiled.Smten.System.Timeout
    Smten.Compiled.Smten.Tests.Array
    Smten.Compiled.Smten.Tests.Basic
    Smten.Compiled.Smten.Tests.Bit
    Smten.Compiled.Smten.Tests.DataMap
    Smten.Compiled.Smten.Tests.List
    Smten.Compiled.Smten.Tests.Prelude
    Smten.Compiled.Smten.Tests.State
    Smten.Compiled.Smten.Tests.SMT.Test
    Smten.Compiled.Smten.Tests.SMT.Bit
    Smten.Compiled.Smten.Tests.SMT.Core
    Smten.Compiled.Smten.Tests.SMT.Datatype
    Smten.Compiled.Smten.Tests.SMT.Error
    Smten.Compiled.Smten.Tests.SMT.Integer
    Smten.Compiled.Smten.Tests.Test
    Smten.Compiled.Smten.Tests.All

  other-modules:
    Smten.Runtime.AnyKeyMap
    Smten.Runtime.Assert
    Smten.Runtime.Debug
    Smten.Smten.TypeLitsTH

  build-depends: base ==4.6.*, hashtables ==1.0.*, mtl ==2.1.*,
                 pretty ==1.1.*, array ==0.4.*, ghc-prim ==0.3.*,
                 template-haskell ==2.8.*,
                 smten-base ==4.0.*, smten ==4.0.*
  --ghc-prof-options: -fprof-auto-top
  ghc-options: -fwarn-unused-binds -fwarn-unused-imports

Test-Suite test-smten-lib
    type: exitcode-stdio-1.0
    main-is: tests.hs
    build-depends: base ==4.6.*, hashtables ==1.0.*, mtl ==2.1.*,
                   pretty ==1.1.*,  array ==0.4.*, ghc-prim ==0.3.*,
                   template-haskell ==2.8.*,
                   smten-base ==4.0.*, smten ==4.0.*
    ghc-options: -rtsopts

