name: smten-lib
version: @VERSION@-@GITTAG@
synopsis: Smten library
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2012, 2013, 2014  SRI International, Inc.
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental
description:
  This package provides the Smten Symbolic API and other Smten libraries not
  part of the Smten base libraries. Additional SMT backends are available in
  the packages smten-stp and smten-minisat.

source-repository this
  type: git
  location: https://github.com/ruhler/smten.git
  branch: @GITBRANCH@
  tag: @GITTAG@

library
  exposed-modules:
    Smten.Runtime.Bits
    Smten.Runtime.Build
    Smten.Runtime.Integers
    Smten.Runtime.Model
    Smten.Runtime.Solver
    Smten.Runtime.SolverAST
    Smten.Runtime.Result

    Smten.Control.Monad.Error
    Smten.Control.Monad.Error.Class
    Smten.Control.Monad.Reader
    Smten.Control.Monad.Reader.Class
    Smten.Control.Monad.State.Class
    Smten.Control.Monad.State.Lazy
    Smten.Control.Monad.State.Strict
    Smten.Control.Monad.State
    Smten.Control.Monad.Trans
    Smten.Data.Array
    Smten.Data.Array0
    Smten.Data.Bit
    Smten.Data.Bit0
    Smten.Data.Ix
    Smten.Data.Map
    Smten.Debug.Trace0
    Smten.Debug.Trace
    Smten.Smten.TypeLits

    Smten.Search
    Smten.Searches
    Smten.Search.Solver.Debug
    Smten.Search.Solver.Smten
    Smten.Search.Solver.Yices2
    Smten.Search.Solver.Z3
    Smten.Symbolic0
    Smten.Symbolic
    Smten.Symbolic.SMT
    Smten.Symbolic.Solver.Debug
    Smten.Symbolic.Solver.Pure
    Smten.Symbolic.Solver.Smten
    Smten.Symbolic.Solver.Yices2
    Smten.Symbolic.Solver.Z3
    Smten.System.Environment
    Smten.System.Exit
    Smten.System.Timeout
    Smten.Tests.Array
    Smten.Tests.Basic
    Smten.Tests.Bit
    Smten.Tests.Char
    Smten.Tests.DataMap
    Smten.Tests.List
    Smten.Tests.Prelude
    Smten.Tests.Prim
    Smten.Tests.State
    Smten.Tests.SMT.Test
    Smten.Tests.SMT.Bit
    Smten.Tests.SMT.Opt
    Smten.Tests.SMT.Datatype
    Smten.Tests.SMT.Error
    Smten.Tests.SMT.Integer
    Smten.Tests.SMT.Core
    Smten.Tests.Test
    Smten.Tests.All

    Smten.Compiled.GHC.TypeLits
    Smten.Compiled.Smten.Control.Monad.Error
    Smten.Compiled.Smten.Control.Monad.Error.Class
    Smten.Compiled.Smten.Control.Monad.Reader
    Smten.Compiled.Smten.Control.Monad.Reader.Class
    Smten.Compiled.Smten.Control.Monad.State.Class
    Smten.Compiled.Smten.Control.Monad.State.Lazy
    Smten.Compiled.Smten.Control.Monad.State.Strict
    Smten.Compiled.Smten.Control.Monad.State
    Smten.Compiled.Smten.Control.Monad.Trans
    Smten.Compiled.Smten.Data.Array
    Smten.Compiled.Smten.Data.Array0
    Smten.Compiled.Smten.Data.Bit
    Smten.Compiled.Smten.Data.Bit0
    Smten.Compiled.Smten.Data.Ix
    Smten.Compiled.Smten.Data.Map
    Smten.Compiled.Smten.Debug.Trace0
    Smten.Compiled.Smten.Debug.Trace
    Smten.Compiled.Smten.Smten.TypeLits

    Smten.Compiled.Smten.Search
    Smten.Compiled.Smten.Search.Solver.Debug
    Smten.Compiled.Smten.Search.Solver.Smten
    Smten.Compiled.Smten.Search.Solver.Yices2
    Smten.Compiled.Smten.Search.Solver.Z3
    Smten.Compiled.Smten.Searches
    Smten.Compiled.Smten.Symbolic0
    Smten.Compiled.Smten.Symbolic
    Smten.Compiled.Smten.Symbolic.SMT
    Smten.Compiled.Smten.System.Environment
    Smten.Compiled.Smten.System.Exit
    Smten.Compiled.Smten.System.Timeout
    Smten.Compiled.Smten.Tests.Array
    Smten.Compiled.Smten.Tests.Basic
    Smten.Compiled.Smten.Tests.Bit
    Smten.Compiled.Smten.Tests.Char
    Smten.Compiled.Smten.Tests.DataMap
    Smten.Compiled.Smten.Tests.List
    Smten.Compiled.Smten.Tests.Prelude
    Smten.Compiled.Smten.Tests.Prim
    Smten.Compiled.Smten.Tests.State
    Smten.Compiled.Smten.Tests.SMT.Test
    Smten.Compiled.Smten.Tests.SMT.Bit
    Smten.Compiled.Smten.Tests.SMT.Core
    Smten.Compiled.Smten.Tests.SMT.Datatype
    Smten.Compiled.Smten.Tests.SMT.Error
    Smten.Compiled.Smten.Tests.SMT.Integer
    Smten.Compiled.Smten.Tests.SMT.Opt
    Smten.Compiled.Smten.Tests.Test
    Smten.Compiled.Smten.Tests.All

  other-modules:
    Smten.Runtime.AnyKeyMap
    Smten.Runtime.Debug
    Smten.Runtime.HashTable
    Smten.Runtime.Yices2.AST
    Smten.Runtime.Yices2.FFI
    Smten.Runtime.Z3.FFI
    Smten.Smten.TypeLitsTH
    Smten.Tests.Yices2
    Smten.Tests.Z3
    Smten.Compiled.Smten.Tests.Yices2
    Smten.Compiled.Smten.Tests.Z3

  build-depends: base ==4.6.*, hashtables ==1.0.*, mtl ==2.1.*,
                 pretty ==1.1.*, array ==0.4.*, ghc-prim ==0.3.*,
                 template-haskell ==2.8.*, containers ==0.5.*,
                 hashable ==1.2.*,
                 smten-base ==@VERSIONMAJOR@.*, smten ==@VERSIONMAJOR@.*
  --ghc-prof-options: -fprof-auto-top
  ghc-options: -fwarn-unused-binds -fwarn-unused-imports
  extra-libraries: dl
  c-sources: Smten/Runtime/Yices2/y2.c, Smten/Runtime/Z3/z3.c

Test-Suite tests
    type: exitcode-stdio-1.0
    main-is: tests.hs
    build-depends: base ==4.6.*, hashtables ==1.0.*, mtl ==2.1.*,
                   pretty ==1.1.*,  array ==0.4.*, ghc-prim ==0.3.*,
                   template-haskell ==2.8.*, containers ==0.5.*,
                   hashable ==1.2.*,
                   smten-base ==@VERSIONMAJOR@.*, smten ==@VERSIONMAJOR@.*
    ghc-options: -rtsopts
    extra-libraries: dl
    c-sources: Smten/Runtime/Yices2/y2.c, Smten/Runtime/Z3/z3.c

test-suite y2tests
  type: exitcode-stdio-1.0
  main-is: y2tests.hs
  build-depends: base ==4.6.*, hashtables ==1.0.*, mtl ==2.1.*,
                 pretty ==1.1.*,  array ==0.4.*, ghc-prim ==0.3.*,
                 template-haskell ==2.8.*, containers ==0.5.*,
                 hashable ==1.2.*,
                 smten-base ==@VERSIONMAJOR@.*, smten ==@VERSIONMAJOR@.*
  extra-libraries: dl
  c-sources: Smten/Runtime/Yices2/y2.c, Smten/Runtime/Z3/z3.c

test-suite z3tests
  type: exitcode-stdio-1.0
  main-is: z3tests.hs
  build-depends: base ==4.6.*, hashtables ==1.0.*, mtl ==2.1.*,
                 pretty ==1.1.*,  array ==0.4.*, ghc-prim ==0.3.*,
                 template-haskell ==2.8.*, containers ==0.5.*,
                 hashable ==1.2.*,
                 smten-base ==@VERSIONMAJOR@.*, smten ==@VERSIONMAJOR@.*
  extra-libraries: dl
  c-sources: Smten/Runtime/Yices2/y2.c, Smten/Runtime/Z3/z3.c
    
