name: smten-minisat
version: @VERSION@-@GITTAG@
synopsis: Smten minisat backend
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2012, 2013, 2014  SRI International, Inc.
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental
extra-source-files:
   minisat/README, minisat/LICENSE, minisat/core/*.h,
   minisat/doc/ReleaseNotes-2.2.0.txt, minisat/mtl/*.h,
   minisat/utils/*.h
description:
  The smten-minisat package provides a minisat backend for smten.

source-repository this
  type: git
  location: https://github.com/ruhler/smten.git
  branch: @GITBRANCH@
  tag: @GITTAG@

library
  exposed-modules:
    Smten.Runtime.MiniSat.FFI
    Smten.Symbolic.Solver.MiniSat
    Smten.Compiled.Smten.Symbolic.Solver.MiniSat
  
  other-modules:

    Smten.Tests.MiniSat
    Smten.Compiled.Smten.Tests.MiniSat

  build-depends: base ==4.7.*, hashtables ==1.1.*,
                 smten ==@VERSIONMAJOR@.*, smten-base ==@VERSIONMAJOR@.*,
                 smten-lib ==@VERSIONMAJOR@.*
  ghc-options: -fwarn-unused-binds -fwarn-unused-imports
  include-dirs: minisat
  cc-options: -D __STDC_LIMIT_MACROS -D __STDC_FORMAT_MACROS
  c-sources: minisat.cc minisat/core/Solver.cc
  extra-libraries: stdc++

test-suite test-smten-minisat
  type: exitcode-stdio-1.0
  main-is: tests.hs
  build-depends: base ==4.7.*, hashtables ==1.1.*,
                 smten-base ==@VERSIONMAJOR@.*, smten-lib ==@VERSIONMAJOR@.*
  include-dirs: minisat
  cc-options: -D __STDC_LIMIT_MACROS -D __STDC_FORMAT_MACROS
  c-sources: minisat.cc minisat/core/Solver.cc
  extra-libraries: stdc++

